--- a/RuntimePermissions/app/src/main/AndroidManifest.xml
+++ b/RuntimePermissions/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
