--- a/ContactPermission/app/build.gradle
+++ b/ContactPermission/app/build.gradle
@@ -18,6 +18,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -26,4 +30,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.github.HITGIF:TextFieldBoxes:1.3.7'
+    implementation 'com.android.support:design:26.1.0'
 }
