--- a/ContactPermission/app/src/main/AndroidManifest.xml
+++ b/ContactPermission/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ecs.contactpermission">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
         android:allowBackup="true"
