Handle multiple permission
Handle multiple permission at runtime in android.
permission related to CALL_PHONE, CAMERA, READ_EXTERNAL_STORAGE are been handled

--- a/AndroidLibrary/settings.gradle
+++ b/AndroidLibrary/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':customprogressdialog', ':customimageviewpager'
+include ':app', ':customprogressdialog', ':customimageviewpager', ':custom_edittext'
